Fix button contrast in seafoam. (omeka/theme-foundation-classic#18)

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -12,9 +12,6 @@ $thumbnail-border: 4px solid $secondary-color;
 $thumbnail-shadow: none;
 $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
 
-$button-background: $secondary-color;
-$button-color: $primary-color;
-
 @import 'foundation-core';
 @import 'omeka';
 
